[package]
name = "build-deps"
version = "0.1.4"
authors = ["Frank Rehberger <frehberg@gmail.com>"]
edition = "2018"
readme = "README.md"
keywords = ["test", "generate", "proc_macro", "derive", "dependencies"]
description = "Rust build-script dependencies generator for data/IDL files"
license = "MIT/Apache-2.0"

documentation = "https://docs.rs/build-deps"
homepage = "https://github.com/frehberg/test-generator/tree/master/build-deps"
repository = "https://github.com/frehberg/test-generator/tree/master/build-deps"

[dependencies]
glob = "^0.3"
