[package]
name = "test-generator-utest"
version = "0.1.0"
authors = ["Frank Rehberger <frehberg@gmail.com>"]
edition = "2018"
description = "Rust Test generator: enumerating entries according to file-system pattern and generating a test function for each entry."
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["test", "generator", "filesystem", "utest", "enumerate"]
documentation = "https://docs.rs/test-generator"
homepage = "https://github.com/frehberg/test-generator.git"
repository = "https://github.com/frehberg/test-generator.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
