[package]
name = "test-generator-utest"
version = "0.1.2"
authors = ["Frank Rehberger <frehberg@gmail.com>"]
edition = "2018"
description = "Rust UTest harness, covering the 3 phases: setup/test/teardown"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["test", "generator", "filesystem", "utest", "enumerate"]
documentation = "https://docs.rs/test-generator-utest"
homepage = "https://github.com/frehberg/test-generator.git"
repository = "https://github.com/frehberg/test-generator.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
